--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #circle {
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background-color: red;
-            position: absolute;
-        }
-    </style>
 </head>
 <body>
-    <div id="circle"></div>
+    <button id="button">Click me</button>
+    <div id="output"></div>
     <script src="./dist/index.js"></script>
 </body>
 </html>
